--- a/capi/clusters/gcp/templates/gcpmanagedcontrolplane.yaml
+++ b/capi/clusters/gcp/templates/gcpmanagedcontrolplane.yaml
@@ -1,4 +1,4 @@
-{{- if and (eq .Values.provider "gcp") (eq .Values.type "managed") -}}
+{{- if (eq .Values.type "managed") -}}
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: GCPManagedControlPlane
 metadata:
