add datadog icon

--- a/addons/datadog/addon.yaml
+++ b/addons/datadog/addon.yaml
@@ -1,10 +1,11 @@
 name: datadog
 description: "packaged datadog agent able to run in-cluster"
 global: true
+icon: https://github.com/pluralsh/plural-artifacts/blob/main/datadog/plural/icons/datadog.png?raw=true
 configuration:
 - name: apiKey
-  type: STRING
+  type: string
   documentation: the api key for your datadog account
 - name: appKey
-  type: STRING
+  type: string
   documentation: the app key to use with this agent
