--- a/capi/providers/gcp/Chart.yaml
+++ b/capi/providers/gcp/Chart.yaml
@@ -1,6 +1,10 @@
 apiVersion: v2
-name: gcp-workload-cluster
-description: A base Helm chart for GCP Cluster API workload cluster
+name: gcp-provider
+description: A base Helm chart for GCP Cluster API controller
 type: application
 version: 0.0.0
-appVersion: v0.0.0
+appVersion: v1.4.5
+dependencies:
+  - name: cluster-api-provider-gcp
+    version: 0.1.5
+    repository: https://pluralsh.github.io/capi-helm-charts
