--- a/capi/providers/aws/Chart.yaml
+++ b/capi/providers/aws/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: aws-provider
+name: cluster-api-provider-aws
 description: A base Helm chart for AWS provider
 type: application
 version: 0.0.1
