update azure worker values

--- a/capi/clusters/azure/values.yaml
+++ b/capi/clusters/azure/values.yaml
@@ -102,176 +102,175 @@ cluster:
     # Profiles of managed cluster add-on.
     addonProfiles: []
 
+workerDefaults:
+  replicas: 0
+  labels: { }
+  annotations:
+    cluster.x-k8s.io/replicas-managed-by: external-autoscaler
+  isMultiAZ: false # if false, will create a node group per AZ
+  spec:
+    availabilityZones:
+      - "1"
+      - "2"
+      - "3"
+    enableNodePublicIP: false
+    maxPods: 110
+    mode: User
+    nodeLabels: { }
+    nodePublicIPPrefixID: ""
+    osDiskSizeGB: 50
+    osDiskType: Managed
+    osType: Linux
+    scaling:
+      maxSize: 5
+      minSize: 1
+    sku: Standard_D2s_v3
+    additionalTags: { }
+    taints: { }
+    kubeletConfig: { }
+    linuxOSConfig: { }
+
 workers:
-  defaults:
-    azure:
-      replicas: 0
-      labels: {}
-      annotations:
-        cluster.x-k8s.io/replicas-managed-by: external-autoscaler
-      isMultiAZ: false # if false, will create a node group per AZ
-      spec:
-        availabilityZones:
-        - "1"
-        - "2"
-        - "3"
-        enableNodePublicIP: false
-        maxPods: 110
-        mode: User
-        nodeLabels: {}
-        nodePublicIPPrefixID: ""
-        osDiskSizeGB: 50
-        osDiskType: Managed
-        osType: Linux
-        scaling:
-          maxSize: 5
-          minSize: 1
-        sku: Standard_D2s_v3
-        additionalTags: {}
-        taints: {}
-        kubeletConfig: {}
-        linuxOSConfig: {}
-  azure:
-    lsod:
-      spec:
-        additionalTags: # TODO: allow this to not be set
-          ScalingGroup: large-sustained-on-demand
-        enableNodePublicIP: false
-        maxPods: 110
-        mode: User
-        nodeLabels:
-          plural.sh/capacityType: ON_DEMAND
-          plural.sh/performanceType: SUSTAINED
-          plural.sh/scalingGroup: large-sustained-on-demand
-        osDiskSizeGB: 50
-        osDiskType: Managed
-        osType: Linux
-        scaling:
-          maxSize: 9
-          minSize: 0
-        sku: Standard_D8as_v5
-    lsspot:
-      replicas: 0
-      isMultiAZ: true
-      spec:
-        additionalTags: # TODO: allow this to not be set
-          ScalingGroup: large-sustained-spot
-        enableNodePublicIP: false
-        maxPods: 110
-        mode: User
-        nodeLabels:
-          plural.sh/capacityType: SPOT
-          plural.sh/performanceType: SUSTAINED
-          plural.sh/scalingGroup: large-sustained-spot
-        osDiskSizeGB: 50
-        osDiskType: Managed
-        osType: Linux
-        scaleSetPriority: Spot
-        scaling:
-          maxSize: 9
-          minSize: 0
-        scaleDownMode: Delete
-        spotMaxPrice: -1
-        sku: Standard_D8as_v5
-        taints:
-          - effect: NoSchedule
-            key: plural.sh/capacityType
-            value: SPOT
-          - effect: NoSchedule
-            key: kubernetes.azure.com/scalesetpriority
-            value: spot
-    msod:
-      spec:
-        additionalTags: # TODO: allow this to not be set
-          ScalingGroup: medium-sustained-on-demand
-        enableNodePublicIP: false
-        maxPods: 110
-        mode: User
-        nodeLabels:
-          plural.sh/capacityType: ON_DEMAND
-          plural.sh/performanceType: SUSTAINED
-          plural.sh/scalingGroup: medium-sustained-on-demand
-        osDiskSizeGB: 50
-        osDiskType: Managed
-        osType: Linux
-        scaling:
-          maxSize: 9
-          minSize: 0
-        sku: Standard_D4as_v5
-    msspot:
-      isMultiAZ: true
-      spec:
-        additionalTags: # TODO: allow this to not be set
-          ScalingGroup: medium-sustained-spot
-        enableNodePublicIP: false
-        maxPods: 110
-        mode: User
-        nodeLabels:
-          plural.sh/capacityType: SPOT
-          plural.sh/performanceType: SUSTAINED
-          plural.sh/scalingGroup: medium-sustained-spot
-        osDiskSizeGB: 50
-        osDiskType: Managed
-        osType: Linux
-        scaleSetPriority: Spot
-        scaling:
-          maxSize: 9
-          minSize: 0
-        scaleDownMode: Delete
-        spotMaxPrice: -1
-        sku: Standard_D4as_v5
-        taints:
-          - effect: NoSchedule
-            key: plural.sh/capacityType
-            value: SPOT
-          - effect: NoSchedule
-            key: kubernetes.azure.com/scalesetpriority
-            value: spot
-    ssod:
-      replicas: 1
-      spec:
-        additionalTags: # TODO: allow this to not be set
-          ScalingGroup: small-sustained-on-demand
-        enableNodePublicIP: false
-        maxPods: 110
-        mode: System
-        nodeLabels:
-          plural.sh/capacityType: ON_DEMAND
-          plural.sh/performanceType: SUSTAINED
-          plural.sh/scalingGroup: small-sustained-on-demand
-        osDiskSizeGB: 50
-        osDiskType: Managed
-        osType: Linux
-        scaling:
-          maxSize: 9
-          minSize: 1
-        sku: Standard_D2as_v5
-    ssspot:
-      isMultiAZ: true
-      spec:
-        additionalTags: # TODO: allow this to not be set
-          ScalingGroup: small-sustained-spot
-        enableNodePublicIP: false
-        maxPods: 110
-        mode: User
-        nodeLabels:
-          plural.sh/capacityType: SPOT
-          plural.sh/performanceType: SUSTAINED
-          plural.sh/scalingGroup: small-sustained-spot
-        osDiskSizeGB: 50
-        osDiskType: Managed
-        osType: Linux
-        scaleSetPriority: Spot
-        scaling:
-          maxSize: 9
-          minSize: 0
-        scaleDownMode: Delete
-        spotMaxPrice: -1
-        sku: Standard_D2as_v5
-        taints:
-          - effect: NoSchedule
-            key: plural.sh/capacityType
-            value: SPOT
-          - effect: NoSchedule
-            key: kubernetes.azure.com/scalesetpriority
-            value: spot
+  lsod:
+    spec:
+      additionalTags: # TODO: allow this to not be set
+        ScalingGroup: large-sustained-on-demand
+      enableNodePublicIP: false
+      maxPods: 110
+      mode: User
+      nodeLabels:
+        plural.sh/capacityType: ON_DEMAND
+        plural.sh/performanceType: SUSTAINED
+        plural.sh/scalingGroup: large-sustained-on-demand
+      osDiskSizeGB: 50
+      osDiskType: Managed
+      osType: Linux
+      scaling:
+        maxSize: 9
+        minSize: 0
+      sku: Standard_D8as_v5
+  lsspot:
+    replicas: 0
+    isMultiAZ: true
+    spec:
+      additionalTags: # TODO: allow this to not be set
+        ScalingGroup: large-sustained-spot
+      enableNodePublicIP: false
+      maxPods: 110
+      mode: User
+      nodeLabels:
+        plural.sh/capacityType: SPOT
+        plural.sh/performanceType: SUSTAINED
+        plural.sh/scalingGroup: large-sustained-spot
+      osDiskSizeGB: 50
+      osDiskType: Managed
+      osType: Linux
+      scaleSetPriority: Spot
+      scaling:
+        maxSize: 9
+        minSize: 0
+      scaleDownMode: Delete
+      spotMaxPrice: -1
+      sku: Standard_D8as_v5
+      taints:
+        - effect: NoSchedule
+          key: plural.sh/capacityType
+          value: SPOT
+        - effect: NoSchedule
+          key: kubernetes.azure.com/scalesetpriority
+          value: spot
+  msod:
+    spec:
+      additionalTags: # TODO: allow this to not be set
+        ScalingGroup: medium-sustained-on-demand
+      enableNodePublicIP: false
+      maxPods: 110
+      mode: User
+      nodeLabels:
+        plural.sh/capacityType: ON_DEMAND
+        plural.sh/performanceType: SUSTAINED
+        plural.sh/scalingGroup: medium-sustained-on-demand
+      osDiskSizeGB: 50
+      osDiskType: Managed
+      osType: Linux
+      scaling:
+        maxSize: 9
+        minSize: 0
+      sku: Standard_D4as_v5
+  msspot:
+    isMultiAZ: true
+    spec:
+      additionalTags: # TODO: allow this to not be set
+        ScalingGroup: medium-sustained-spot
+      enableNodePublicIP: false
+      maxPods: 110
+      mode: User
+      nodeLabels:
+        plural.sh/capacityType: SPOT
+        plural.sh/performanceType: SUSTAINED
+        plural.sh/scalingGroup: medium-sustained-spot
+      osDiskSizeGB: 50
+      osDiskType: Managed
+      osType: Linux
+      scaleSetPriority: Spot
+      scaling:
+        maxSize: 9
+        minSize: 0
+      scaleDownMode: Delete
+      spotMaxPrice: -1
+      sku: Standard_D4as_v5
+      taints:
+        - effect: NoSchedule
+          key: plural.sh/capacityType
+          value: SPOT
+        - effect: NoSchedule
+          key: kubernetes.azure.com/scalesetpriority
+          value: spot
+  ssod:
+    replicas: 1
+    spec:
+      additionalTags: # TODO: allow this to not be set
+        ScalingGroup: small-sustained-on-demand
+      enableNodePublicIP: false
+      maxPods: 110
+      mode: System
+      nodeLabels:
+        plural.sh/capacityType: ON_DEMAND
+        plural.sh/performanceType: SUSTAINED
+        plural.sh/scalingGroup: small-sustained-on-demand
+      osDiskSizeGB: 50
+      osDiskType: Managed
+      osType: Linux
+      scaling:
+        maxSize: 9
+        minSize: 1
+      sku: Standard_D2as_v5
+  ssspot:
+    isMultiAZ: true
+    spec:
+      additionalTags: # TODO: allow this to not be set
+        ScalingGroup: small-sustained-spot
+      enableNodePublicIP: false
+      maxPods: 110
+      mode: User
+      nodeLabels:
+        plural.sh/capacityType: SPOT
+        plural.sh/performanceType: SUSTAINED
+        plural.sh/scalingGroup: small-sustained-spot
+      osDiskSizeGB: 50
+      osDiskType: Managed
+      osType: Linux
+      scaleSetPriority: Spot
+      scaling:
+        maxSize: 9
+        minSize: 0
+      scaleDownMode: Delete
+      spotMaxPrice: -1
+      sku: Standard_D2as_v5
+      taints:
+        - effect: NoSchedule
+          key: plural.sh/capacityType
+          value: SPOT
+        - effect: NoSchedule
+          key: kubernetes.azure.com/scalesetpriority
+          value: spot
