--- a/capi/clusters/azure/templates/machine-pools.yaml
+++ b/capi/clusters/azure/templates/machine-pools.yaml
@@ -1,7 +1,7 @@
 {{- if eq .Values.type "managed" -}}
 {{- $currentScope := . -}}
-{{- $defaultVals := .Values.workers.defaults.azure -}}
-{{- range $name, $values := .Values.workers.azure }}
+{{- $defaultVals := .Values.workerDefaults -}}
+{{- range $name, $values := .Values.workers }}
 {{- with $currentScope}}
 {{- $isMultiAZ := ($values | default dict).isMultiAZ | default $defaultVals.isMultiAZ }}
 {{- $availabilityZones := ($values.spec | default dict).availabilityZones | default $defaultVals.spec.availabilityZones }}
