--- a/capi/clusters/azure/Chart.yaml
+++ b/capi/clusters/azure/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: cluster-api-cluster
-description: A Helm chart for Kubernetes
+name: azure-workload-cluster
+description: A base Helm chart for Azure Cluster API workload cluster
 type: application
-version: 0.1.46
-appVersion: v1.24.16
+version: 0.0.0
+appVersion: v0.0.0
