fix azure templating

--- a/capi/clusters/azure/templates/azuremanagedcontrolplane.yaml
+++ b/capi/clusters/azure/templates/azuremanagedcontrolplane.yaml
@@ -14,7 +14,7 @@ spec:
   resourceGroupName: {{ .Values.cluster.resourceGroupName }}
   nodeResourceGroupName: {{ .Values.cluster.nodeResourceGroupName }}
   subscriptionID: {{ .Values.cluster.subscriptionID }}
-  version: {{ include "cluster.kubernetesVersion" . }}
+  version: {{ .Values.cluster.kubernetesVersion }}
   {{- if ne .Values.cluster.sshPublicKey "skip" }}
   sshPublicKey: {{ .Values.cluster.sshPublicKey | quote }}
   {{- end }}
