--- a/capi/clusters/azure/templates/azureclusteridentity.yaml
+++ b/capi/clusters/azure/templates/azureclusteridentity.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.cluster.clusterIdentity -}}
 kind: AzureClusterIdentity
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 metadata:
@@ -58,3 +59,4 @@ metadata:
 spec:
   azureIdentity: {{ include "azure-bootstrap.pod-identity-name" . }}
   selector: capz-controller-aadpodidentity-selector
+{{- end }}
