refer to the default identity if none is specified

--- a/capi/clusters/azure/templates/azuremanagedcontrolplane.yaml
+++ b/capi/clusters/azure/templates/azuremanagedcontrolplane.yaml
@@ -11,6 +11,12 @@ spec:
     kind: AzureClusterIdentity
     name: {{ .Values.cluster.clusterIdentity.name }}
     namespace: {{ .Release.Namespace }}
+  {{- else }}
+  identityRef:
+    apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
+    kind: AzureClusterIdentity
+    name: "default-identity" # Refers to the identity created in the capi/providers/azure/templates/identity.yaml.
+    namespace: {{ .Release.Namespace }}
   {{- end }}
   location: {{ .Values.cluster.location }}
   resourceGroupName: {{ .Values.cluster.resourceGroupName }}
