--- a/capi/clusters/azure/templates/azuremanagedcontrolplane.yaml
+++ b/capi/clusters/azure/templates/azuremanagedcontrolplane.yaml
@@ -22,7 +22,7 @@ spec:
   resourceGroupName: {{ .Values.cluster.resourceGroupName }}
   nodeResourceGroupName: {{ .Values.cluster.nodeResourceGroupName }}
   subscriptionID: {{ .Values.cluster.subscriptionID }}
-  version: v{{ trimPrefix "v" .Values.cluster.kubernetesVersion }}
+  version: "v{{ trimPrefix "v" .Values.cluster.kubernetesVersion }}"
   {{- with .Values.cluster.virtualNetwork }}
   virtualNetwork:
     {{- toYaml . | nindent 4 }}
