--- a/capi/clusters/aws/templates/awsmanagedcontrolplane.yaml
+++ b/capi/clusters/aws/templates/awsmanagedcontrolplane.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   region: {{ .Values.cluster.aws.region }}
   sshKeyName: {{ .Values.cluster.aws.sshKeyName }}
-  version: "v{{ trimPrefix "v" .Values.cluster.kubernetesVersion }}"
+  version: v{{ trimPrefix "v" (.Values.cluster.kubernetesVersion | toString) }}
   {{- with .Values.cluster.aws.addons }}
   addons:
   {{- toYaml . | nindent 4 }}
