update Azure provider

--- a/capi/providers/azure/values.yaml
+++ b/capi/providers/azure/values.yaml
@@ -1,10 +1,11 @@
-# nameOverride: ""
+nameOverride: capz
+fullnameOverride: ""
 
 identity:
-  name: "default-identity"
-  clientID: ""
+  clientId: ""
   clientSecret: ""
-  tenantID: ""
+  tenantId: ""
+  subscriptionId: ""
 
 cluster-api-provider-azure:
   configVariables:
