--- a/capi/providers/azure/templates/identity.yaml
+++ b/capi/providers/azure/templates/identity.yaml
@@ -32,5 +32,8 @@ metadata:
   labels:
   {{- include "cluster-api-provider-azure.labels" . | nindent 4 }}
 stringData:
+  AZURE_CLIENT_ID: {{ .Values.identity.clientId | quote }}
+  AZURE_CLIENT_SECRET: {{ .Values.identity.clientSecret | quote }}
   AZURE_SUBSCRIPTION_ID: {{ .Values.identity.subscriptionId | quote }}
+  AZURE_TENANT_ID: {{ .Values.identity.tenantId | quote }}
 type: Opaque
