untaint spot instance ndoes

--- a/capi/clusters/aws/values.yaml
+++ b/capi/clusters/aws/values.yaml
@@ -149,10 +149,10 @@ workers:
           plural.sh/scalingGroup: small-burst-spot
         additionalTags: { } # TODO: allow this to not be set
         capacityType: spot
-        taints:
-          - effect: no-schedule
-            key: plural.sh/capacityType
-            value: SPOT
+        taints: { }
+#          - effect: no-schedule
+#            key: plural.sh/capacityType
+#            value: SPOT
     medium-burst-spot:
       isMultiAZ: true
       spec:
@@ -166,10 +166,10 @@ workers:
         scaling:
           maxSize: 5
           minSize: 0
-        taints:
-          - effect: no-schedule
-            key: plural.sh/capacityType
-            value: SPOT
+        taints: { }
+#          - effect: no-schedule
+#            key: plural.sh/capacityType
+#            value: SPOT
     large-burst-spot:
       isMultiAZ: true
       spec:
@@ -183,7 +183,7 @@ workers:
         scaling:
           maxSize: 5
           minSize: 0
-        taints:
-          - effect: no-schedule
-            key: plural.sh/capacityType
-            value: SPOT
+        taints: { }
+#          - effect: no-schedule
+#            key: plural.sh/capacityType
+#            value: SPOT
