--- a/capi/clusters/gcp/templates/gcpmanagedcontrolplane.yaml
+++ b/capi/clusters/gcp/templates/gcpmanagedcontrolplane.yaml
@@ -21,5 +21,5 @@ spec:
     host: ""
     port: 0
   {{- end }}
-  controlPlaneVersion: v{{ trimPrefix "v" (.Values.cluster.kubernetesVersion | toString) }}
+  controlPlaneVersion: {{ trimPrefix "v" (.Values.cluster.kubernetesVersion | toString) }}
 {{- end }}
