enable bootstrap mode for gcp provider

--- a/capi/providers/gcp/values.yaml
+++ b/capi/providers/gcp/values.yaml
@@ -12,4 +12,4 @@ cluster-api-provider-gcp:
       image:
         repository: ghcr.io/pluralsh/cluster-api-gcp-controller
         tag: v1.4.7
-  bootstrapMode: false
+  bootstrapMode: true
