--- a/capi/providers/azure/templates/identity.yaml
+++ b/capi/providers/azure/templates/identity.yaml
@@ -2,10 +2,7 @@
 kind: AzureClusterIdentity
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 metadata:
-  # At the moment it is created with the same name and namespace as identity in the management cluster.
-  # TODO: Once we will be able to check management cloud name we can update this to use different name and chart release namespace.
-  name: default
-  namespace: bootstrap
+  name: default # Using same name as identity created by the management cluster, so it can be easily referenced.
   labels:
   {{- include "cluster-api-provider-azure.labels" . | nindent 4 }}
 spec:
@@ -15,13 +12,12 @@ spec:
   clientID: {{ .Values.identity.clientId }}
   clientSecret:
     name: default-identity-secret
-    namespace: bootstrap
+    namespace: {{ .Release.Namespace }}
 ---
 kind: Secret
 apiVersion: v1
 metadata:
   name:  default-identity-secret
-  namespace: bootstrap
   labels:
   {{- include "cluster-api-provider-azure.labels" . | nindent 4 }}
 type: Opaque
