--- a/addons/externaldns/addon.yaml
+++ b/addons/externaldns/addon.yaml
@@ -1,7 +1,7 @@
 name: externaldns
 description: "automate creating DNS records in common DNS services like route53, cloudflare and others"
 global: false
-icon: https://github.com/kubernetes-sigs/external-dns/blob/master/docs/img/external-dns.png
+icon: https://github.com/kubernetes-sigs/external-dns/blob/master/docs/img/external-dns.png?raw=true
 configuration:
 - name: provider
   type: select
