--- a/addons/cert-manager/values.yaml
+++ b/addons/cert-manager/values.yaml
@@ -5,6 +5,12 @@
 global:
   leaderElection:
     namespace: cert-manager
+  
+  podDnsPolicy: "None"
+  podDnsConfig:
+    nameservers:
+      - "1.1.1.1"
+      - "8.8.8.8"
 
 ownerEmail: someone@example.com
 ingressClass: nginx
