better github icons

--- a/addons/plrl-gh-actions-runner/addon.yaml
+++ b/addons/plrl-gh-actions-runner/addon.yaml
@@ -1,7 +1,7 @@
 name: plrl-github-actions-runner
 description: kubernetes operator to provision github actions
 global: true
-icon: https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png
+icon: https://static-00.iconduck.com/assets.00/github-icon-2048x1988-jzvzcf2t.png
 configuration:
 - name: githubConfigUrl
   type: string
