--- a/addons/github-actions-controller/addon.yaml
+++ b/addons/github-actions-controller/addon.yaml
@@ -1,5 +1,5 @@
 name: github-actions-controller
 description: kubernetes operator to provision github actions
 global: true
-icon: https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png
+icon: https://static-00.iconduck.com/assets.00/github-icon-2048x1988-jzvzcf2t.png
 configuration: []
