github actions runners are not globalizable

--- a/addons/github-actions-controller/addon.yaml
+++ b/addons/github-actions-controller/addon.yaml
@@ -1,5 +1,5 @@
 name: github-actions-controller
 description: kubernetes operator to provision github actions
-global: true
+global: false
 icon: https://static-00.iconduck.com/assets.00/github-icon-2048x1988-jzvzcf2t.png
 configuration: []
