--- a/addons/plrl-github-actions-runner/addon.yaml
+++ b/addons/plrl-github-actions-runner/addon.yaml
@@ -1,6 +1,6 @@
 name: plrl-github-actions-runner
 description: kubernetes operator to provision github actions
-global: true
+global: false
 icon: https://static-00.iconduck.com/assets.00/github-icon-2048x1988-jzvzcf2t.png
 configuration:
 - name: githubConfigUrl
