--- a/addons/plrl-github-actions-runner/values.yaml
+++ b/addons/plrl-github-actions-runner/values.yaml
@@ -1,4 +1,7 @@
 # Default values for github-actions-runner.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-gha-runner-scale-set: {}
+gha-runner-scale-set:
+  controllerServiceAccount:
+    name: github-actions-controller-gha-rs-controller
+    namespace: github-actions-controller
