--- a/addons/plrl-github-actions-runner/values.yaml
+++ b/addons/plrl-github-actions-runner/values.yaml
@@ -5,3 +5,12 @@ gha-runner-scale-set:
   controllerServiceAccount:
     name: github-actions-controller-gha-rs-controller
     namespace: github-actions-controller
+  containerMode:
+    type: kubernetes
+    kubernetesModeWorkVolumeClaim:
+      accessModes: ["ReadWriteOnce"]
+      # For local testing, use https://github.com/openebs/dynamic-localpv-provisioner/blob/develop/docs/quickstart.md to provide dynamic provision volume with storageClassName: openebs-hostpath
+      # storageClassName: "dynamic-blob-storage"
+      resources:
+        requests:
+          storage: 1Gi
