disable opencost in grafana agent

--- a/addons/grafana-agent/values.yaml
+++ b/addons/grafana-agent/values.yaml
@@ -1,4 +1,7 @@
 # Default values for grafana-agent.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-{}
+k8s-monitoring:
+  externalServices:
+    cost:
+      enabled: false
