--- a/addons/grafana-agent/values.yaml
+++ b/addons/grafana-agent/values.yaml
@@ -2,8 +2,17 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 k8s-monitoring:
+  opencost:
+    enabled: false
+
+  cluster:
+    name: CHANGEME
+
   externalServices:
     cost:
       enabled: false
     prometheus:
+      host: CHANGEME
       writeEndpoint: /api/v1/push
+    loki:
+      host: CHANGEME
