--- a/addons/plrl-github-actions-runner/values.yaml
+++ b/addons/plrl-github-actions-runner/values.yaml
@@ -7,10 +7,13 @@ gha-runner-scale-set:
     namespace: github-actions-controller
   containerMode:
     type: kubernetes
+    template:
+    - name: work
+      emptyDir: {}
     kubernetesModeWorkVolumeClaim:
       accessModes: ["ReadWriteOnce"]
       # For local testing, use https://github.com/openebs/dynamic-localpv-provisioner/blob/develop/docs/quickstart.md to provide dynamic provision volume with storageClassName: openebs-hostpath
-      # storageClassName: "dynamic-blob-storage"
+      storageClassName: "dynamic-blob-storage"
       resources:
         requests:
           storage: 1Gi
