--- a/addons/plrl-github-actions-runner/values.yaml
+++ b/addons/plrl-github-actions-runner/values.yaml
@@ -8,8 +8,16 @@ gha-runner-scale-set:
   containerMode:
     type: kubernetes
     template:
-    - name: work
-      emptyDir: {}
+      spec:
+        securityContext:
+          fsGroup: 123
+        containers:
+        - name: runner
+          image: ghcr.io/actions/actions-runner:latest
+          command: ["/home/runner/run.sh"]
+        volumes:
+        - name: work
+          emptyDir: {}
     kubernetesModeWorkVolumeClaim:
       accessModes: ["ReadWriteOnce"]
       # For local testing, use https://github.com/openebs/dynamic-localpv-provisioner/blob/develop/docs/quickstart.md to provide dynamic provision volume with storageClassName: openebs-hostpath
