--- a/addons/plrl-github-actions-runner/values.yaml
+++ b/addons/plrl-github-actions-runner/values.yaml
@@ -7,6 +7,12 @@ gha-runner-scale-set:
     namespace: github-actions-controller
   template:
     spec:
+      securityContext:
+        fsGroup: 1001
+      containers:
+      - name: runner
+        image: ghcr.io/actions/actions-runner:2.311.0
+        command: ["/home/runner/run.sh"]
       volumes:
       - name: work
         emptyDir: {}
