--- a/addons/plrl-github-actions-runner/values.yaml
+++ b/addons/plrl-github-actions-runner/values.yaml
@@ -13,6 +13,9 @@ gha-runner-scale-set:
       - name: runner
         image: ghcr.io/actions/actions-runner:2.311.0
         command: ["/home/runner/run.sh"]
+        env:
+        - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
+          value: "false"
   containerMode:
     type: kubernetes
     kubernetesModeWorkVolumeClaim:
