--- a/capi/clusters/gcp/templates/gcpmanagedcontrolplane.yaml
+++ b/capi/clusters/gcp/templates/gcpmanagedcontrolplane.yaml
@@ -7,6 +7,7 @@ metadata:
     {{- include "workload-cluster.labels" . | nindent 4 }}
   annotations:
     helm.sh/resource-policy: keep
+    {{- include "workload-cluster.dependsOnAnnotation" . | nindent 4 }}
 spec:
   clusterName: {{ .Values.cluster.name }}
   {{- with .Values.cluster }}
