--- a/capi/clusters/gcp/templates/cluster.yaml
+++ b/capi/clusters/gcp/templates/cluster.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "workload-cluster.labels" . | nindent 4 }}
   annotations:
     helm.sh/resource-policy: keep
+    {{- include "workload-cluster.dependsOnAnnotation" . | nindent 4 }}
 spec:
   clusterNetwork:
     {{- with .Values.cluster.podCidrBlocks }}
