--- a/capi/clusters/gcp/templates/gcpmanagedcontrolplane.yaml
+++ b/capi/clusters/gcp/templates/gcpmanagedcontrolplane.yaml
@@ -7,6 +7,8 @@ metadata:
     {{- include "workload-cluster.labels" . | nindent 4 }}
   annotations:
     helm.sh/resource-policy: keep
+  finalizers:
+    - plural.sh
 spec:
   clusterName: {{ .Values.cluster.name }}
   {{- with .Values.cluster }}
